[package]
name = "leveldb-mcpe-sys"
version = "2.0.9"
authors = ["Andrew Dunham <andrew@du.nham.ca>", "Florian Gilcher <florian.gilcher@asquera.de>", "FancyFlame <fancyflame@163.com>"]

description = "FFI bindings to LevelDB (forked from leveldb-sys) with zlib support for Minecraft"
repository = "https://github.com/Fancyflame/leveldb-mcpe-sys"
documentation = "https://docs.rs/leveldb-sys/"
license = "MIT"

build = "src/build.rs"
links = "leveldb"

[features]
snappy = []

[dependencies]
libc = "0.2.*"
ffi-opaque = "2"

[build-dependencies]
cmake = "0.1"
num_cpus = "1.10"
